--- a/app/views/reports/fill_rate.html.erb
+++ b/app/views/reports/fill_rate.html.erb
@@ -69,17 +69,26 @@
                     </div>
                   </div>
 
-                  <div class="mx-3">
-                    Select fields to show on report:
-                  </div>
-                  <div class="row mt-4 mb-3 justify-content-center">
-                    <div class="col-7 text-blueCoral form-check border rounded-2 border-grey border-2 mb-3 ps-5 mx-3" style="height:80vh; overflow-y:auto">
-                      <% fill_rate_reportable_fields.each do |key, value| %>
-                        <div class="ml-4">
-                          <%= check_box_tag 'report[fields_to_show][]', key, false, class: "form-check-input" %>
-                          <%= value %>
-                        </div>
-                      <% end %>
+                  <div data-controller="select-all-or-none">
+
+                    <div class="mx-3">
+                      Select fields to show on report:
+                    </div>
+
+                    <label class="ml-3 mt-2">
+                      <input type="checkbox" data-select-all-or-none-target="checkboxName" data-checkbox-val="checkbox" data-action="select-all-or-none#toggle" />
+                      <span>Select All / Deselect All</span>
+                    </label>
+
+                    <div class="row mt-4 mb-3 justify-content-center">
+                      <div class="col-7 text-blueCoral form-check border rounded-2 border-grey border-2 mb-3 ps-5 mx-3" style="height:80vh; overflow-y:auto">
+                        <% fill_rate_reportable_fields.each do |key, value| %>
+                          <div class="ml-4">
+                            <%= check_box_tag 'report[fields_to_show][]', key, false, class: "form-check-input", data: { select_all_or_none_target: 'checkboxes'} %>
+                            <%= value %>
+                          </div>
+                        <% end %>
+                      </div>
                     </div>
                   </div>
 
