--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -77,7 +77,7 @@
                 <%= link_to t(".billing"), subscriptions_path, class: 'no-underline block px-6 py-3 text-gray-800 bg-white  hover:bg-primary-50 transition ease-in-out duration-200 whitespace-nowrap' if Jumpstart.config.payments_enabled? && policy(:application).show_billing? %>
                 <%= link_to t(".accounts"), accounts_path, class: 'no-underline block px-6 py-3 text-gray-800 bg-white  hover:bg-primary-50 transition ease-in-out duration-200 whitespace-nowrap' %>
                 <% if current_user.interpreter_detail_filled_out? %>
-                  <%= link_to t(".interpreter_details"), edit_interpreter_detail_path(current_user.interpreter_detail), class: "no-underline block px-6 py-3 text-gray-800 bg-white  hover:bg-primary-50 transition ease-in-out duration-200 whitespace-nowrap" if policy(:interpreter).show_account_nav? %>
+                  <%= link_to t(".interpreter_details"), interpreter_detail_path(current_user.interpreter_detail), class: "no-underline block px-6 py-3 text-gray-800 bg-white  hover:bg-primary-50 transition ease-in-out duration-200 whitespace-nowrap" if policy(:interpreter).show_account_nav? %>
                 <% end %>
 
                 <% if current_user.is_interpreter? %>
