--- a/app/views/interpreter_details/_form.html.erb
+++ b/app/views/interpreter_details/_form.html.erb
@@ -15,7 +15,7 @@
 
               <div class="col-span-6 sm:col-span-6 lg:col-span-3">
                 <div class="form-group">
-                    <%= form.label :primary_phone, class:" block text-sm font-medium text-gray-700" %>
+                    <%= form.label :primary_phone, "Primary Phone *", class:" block text-sm font-medium text-gray-700" %>
                     <%= form.text_field :primary_phone, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
                 </div>
               </div>
@@ -88,28 +88,28 @@
 
               <div class="col-span-6">
                 <div class="form-group">
-                  <%= form.label :street_address, class:" block text-sm font-medium text-gray-700" %>
+                  <%= form.label :street_address, "Street Address *", class:" block text-sm font-medium text-gray-700" %>
                   <%= form.text_field :address, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
                 </div>
               </div>
 
               <div class="col-span-6 sm:col-span-6 lg:col-span-2">
                 <div class="form-group">
-                  <%= form.label :city, class:" block text-sm font-medium text-gray-700" %>
+                  <%= form.label :city, "City *", class:" block text-sm font-medium text-gray-700" %>
                   <%= form.text_field :city, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
                 </div>
               </div>
 
               <div class="col-span-6 sm:col-span-3 lg:col-span-2">
                 <div class="form-group">
-                  <%= form.label :state, class:" block text-sm font-medium text-gray-700" %>
+                  <%= form.label :state, "State *", class:" block text-sm font-medium text-gray-700" %>
                   <%= form.text_field :state, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
                 </div>
               </div>
 
               <div class="col-span-6 sm:col-span-3 lg:col-span-2">
                 <div class="form-group">
-                  <%= form.label :zip_code, class:" block text-sm font-medium text-gray-700" %>
+                  <%= form.label :zip_code, "Zip Code *", class:" block text-sm font-medium text-gray-700" %>
                   <%= form.text_field :zip, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
                 </div>
               </div>
