appointment show page, show cancel reason if cancelled #475

--- a/app/views/appointments/_appointment_details.html.erb
+++ b/app/views/appointments/_appointment_details.html.erb
@@ -23,6 +23,12 @@
         <dt class="text-sm font-medium leading-6 text-gray-900">Status</dt>
         <dd class="mt-1 text-sm leading-6 text-gray-700 sm:mt-2"><%= @appointment.status.titleize %></dd>
       </div>
+      <% if @appointment.status == 'cancelled' %>
+        <div class="border-t border-gray-100 px-4 py-6 sm:col-span-1 sm:px-0">
+          <dt class="text-sm font-medium leading-6 text-gray-900">Reason for Cancellation</dt>
+          <dd class="mt-1 text-sm leading-6 text-gray-700 sm:mt-2"><%= @appointment.cancel_reason_code.titleize %></dd>
+        </div>
+      <% end %>
       <div class="border-t border-gray-100 px-4 py-6 sm:col-span-1 sm:px-0">
         <dt class="text-sm font-medium leading-6 text-gray-900">
           <%=
