TK-256 - Requestor scoping issues fixed

--- a/app/views/shared/_confirm_modal.html.erb
+++ b/app/views/shared/_confirm_modal.html.erb
@@ -1,4 +1,4 @@
-<dialog id="turbo-confirm" class="bg-white mx-auto rounded-lg drop-shadow-lg p-8 max-w-sm">
+<dialog id="turbo-confirm" class="bg-white mx-auto rounded-lg drop-shadow-lg p-8 max-w-sm" style="display: none">
   <form method="dialog">
     <h4>Are you sure?</h4>
     <div class="mt-8 text-right">
