--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -8,7 +8,7 @@
     </div>
 
     <div class="flex flex-wrap justify-center">
-      <%= link_to t(".about"), about_path, class: "text-gray-700 no-underline block px-4 lg:my-0 my-2", target: "_blank" %>
+      <%= link_to t(".about"), "http://www.tokani.com/about.html", class: "text-gray-700 no-underline block px-4 lg:my-0 my-2", target: "_blank" %>
       <%= link_to t(".privacy"), privacy_path, class: "text-gray-700 hover:text-gray-800 no-underline block lg:my-0 my-2 px-4", target: "_blank" %>
       <%= link_to t(".terms"), terms_path, class: "text-gray-700 hover:text-gray-800 no-underline block lg:my-0 my-2 px-4", target: "_blank" %>
       <%= link_to t(".contact"), "mailto:support@tokani.com", class: "text-gray-700 hover:text-gray-800 no-underline block lg:my-0 my-2 px-4" %>
