Fix: agency admins unable to create an interpreter error
- add a verification skip on interpreter_details controller for agency_admins
- update InterpreterDetail policy to allow agency_admin authorization
- hide account/_navbar on interpreter details form as an agency_admin
- add time_zone field (interpreter detail required) to interpreters/new form

--- a/app/views/interpreter_details/edit.html.erb
+++ b/app/views/interpreter_details/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="flex flex-wrap my-4 lg:px-4">
   <div class="lg:w-1/4 w-full p-4">
-    <%= render partial: "shared/account_navbar" %>
+    <%= render partial: "shared/account_navbar" if policy(:interpreter_detail).interpreter_detail_show_account_nav? %>
   </div>
 
   <%= content_for :title, t("shared.scaffold.edit.title", model: "Interpreter Detail") %>
