--- a/app/views/appointments/_appointment_details.html.erb
+++ b/app/views/appointments/_appointment_details.html.erb
@@ -11,6 +11,14 @@
         <dt class="text-sm font-medium leading-6 text-gray-900">Duration</dt>
         <dd class="mt-1 text-sm leading-6 text-gray-700 sm:mt-2"><%= @appointment.duration_viewable %></dd>
       </div>
+      <% if @appointment.finish_time.present? %>
+        <div class="px-4 pb-6 sm:col-span-1 sm:px-0">
+          <dt class="text-sm font-medium leading-6 text-gray-900">Finish Time</dt>
+          <dd class="mt-1 text-sm leading-6 text-gray-700 sm:mt-2">
+            <%= appointment_finish_time_in_user_time_zone(@appointment, current_user) %>
+          </dd>
+        </div>
+      <% end %>
       <div class="border-t border-gray-100 px-4 py-6 sm:col-span-1 sm:px-0">
         <dt class="text-sm font-medium leading-6 text-gray-900">Modality</dt>
         <dd class="mt-1 text-sm leading-6 text-gray-700 sm:mt-2"><%= @appointment.modality.titleize %></dd>
