--- a/app/views/requestors/_form.html.erb
+++ b/app/views/requestors/_form.html.erb
@@ -6,6 +6,16 @@
       <div class="overflow-hidden shadow sm:rounded-md">
         <div class="bg-white px-4 py-5 sm:p-6">
           <div class="grid grid-cols-6 gap-6">
+            <% if agency_logged_in? %>
+              <%= form.fields_for :requestor_detail do |requestor_detail| %>
+                <div class="col-span-6 sm:col-span-6">
+                  <div class="form-group mb-0" data-controller="select-group">
+                    <%= requestor_detail.label :customer_id, class: "block text-sm font-medium text-gray-700" %>
+                    <%= requestor_detail.select :customer_id, options_from_collection_for_select(account_customers, :id, :name, requestor.requestor_detail.customer_id ), {prompt: "Select A Customer First..."}, {class: 'form-control',  data: {action: 'change->select-group#updateSelectRemote', select_group_url_param: select_list_sites_path, select_group_select_key_param: 'customer_id', select_group_select_update_target_param: 'user_requestor_detail_attributes_site_id', select_group_select_clear_target_param: 'user_requestor_detail_attributes_department_id' }} %>
+                  </div>
+                </div>
+              <% end %>
+            <% end %>
             <div class="col-span-6 sm:col-span-6 lg:col-span-3">
               <%= form.label "First Name*", class: "block text-sm font-medium text-gray-700" %>
               <%= form.text_field :first_name, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
@@ -27,24 +37,15 @@
                 <%= requestor_detail.label :work_phone, class: "block text-sm font-medium text-gray-700" %>
                 <%= requestor_detail.text_field :work_phone, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
               </div>
-              
+
                 <div class="sm:col-span-6 lg:col-span-3">
                   <div class="form-group">
                     <%= requestor_detail.label "Requestor Type*", class: "block text-sm font-medium text-gray-700" %>
                     <%= requestor_detail.select :requestor_type, options_for_select(requestor_type_options, requestor.requestor_detail.requestor_type), {}, class: "form-control focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-s" %>
                   </div>
                 </div>
-              
+
               <div class="col-span-6 sm:col-span-6" data-controller="select-group">
-                <% if agency_logged_in? %>
-                  <div class="col-span-3 sm:col-span-3">
-                    <div class="form-group">
-                      <%= requestor_detail.label :customer_id, class: "block text-sm font-medium text-gray-700" %>
-                      <%= requestor_detail.select :customer_id, options_from_collection_for_select(account_customers, :id, :name, requestor.requestor_detail.customer_id ), {prompt: "Select A Customer First..."}, {class: 'form-control',  data: {action: 'change->select-group#updateSelectRemote', select_group_url_param: select_list_sites_path, select_group_select_key_param: 'customer_id', select_group_select_update_target_param: 'user_requestor_detail_attributes_site_id', select_group_select_clear_target_param: 'user_requestor_detail_attributes_department_id' }} %> 
-                    </div>
-                  </div>
-                <% end %>
-                
                 <div class="col-span-3 sm:col-span-3">
                   <div class="form-group">
                     <%= requestor_detail.label :site_id, class: 'text-blueCoral' %>
@@ -56,20 +57,20 @@
                     <%= requestor_detail.label :department_id, class: 'text-blueCoral' %>
                     <%= requestor_detail.select :department_id, options_from_collection_for_select(departments, :id, :name, requestor.requestor_detail.department_id), {include_blank: "None"}, {disabled: @field_disabled, class: 'form-control'} %>
                   </div>
-                </div>  
+                </div>
               </div>
-              
+
               <div class="col-span-6 sm:col-span-6 lg:col-span-4">
                 <fieldset class="space-y-5">
                   <legend class="sr-only">Requestor Permissions</legend>
                   <div class="relative flex items-start">
                     <div class="flex h-5 items-center">
-                      <%= requestor_detail.check_box :allow_offsite, class:"h-4 w-4 rounded border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500" %>  
+                      <%= requestor_detail.check_box :allow_offsite, class:"h-4 w-4 rounded border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500" %>
                     </div>
                     <div class="ml-3 text-sm">
                       <%= requestor_detail.label :allow_offsite, class:"font-medium text-gray-700" %>
                       <p id="book_offsite" class="text-gray-500">This requestor can book offsite appointments.</p>
-                    </div> 
+                    </div>
                   </div>
                   <div class="relative flex items-start">
                     <div class="flex h-5 items-center">
@@ -103,7 +104,7 @@
           <% end %>
           <%= form.button button_text(form.send(:submit_default_value)), class:"inline-flex justify-center rounded-md border border-transparent bg-tokanisecondary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
         </div>
-      </div> 
+      </div>
     </div>
   </div>
 <% end %>
